styles: Fix thumbnail top alignment
Follow-up to Id673384dac74

Bug: T406628

--- a/resources/ext.readingLists.special/styles.less
+++ b/resources/ext.readingLists.special/styles.less
@@ -102,8 +102,8 @@
 
 			// Apply necessary specificity to set thumbnail size.
 			&.cdx-thumbnail .cdx-thumbnail__image {
-				// Top align thumbnail image.
-				background-position: 0 center;
+				// Center vertically and top align thumbnail image.
+				background-position: center 0;
 				width: @size-full;
 				height: @size-full;
 				aspect-ratio: 1;
